[gd_scene load_steps=17 format=3 uid="uid://b0jyxlxa37bg4"]

[ext_resource type="Script" path="res://settings.gd" id="1_4opy3"]
[ext_resource type="Texture2D" uid="uid://dnyo4ld46q2nm" path="res://UIFiles/titlescreen.png" id="1_xctah"]
[ext_resource type="Texture2D" uid="uid://02bscxrdwodx" path="res://assets/book/ArroflipBook.PNG" id="2_yjugu"]
[ext_resource type="Texture2D" uid="uid://vtklrld004wx" path="res://UIFiles/grabber.PNG" id="3_8iqim"]
[ext_resource type="Theme" uid="uid://dhqskjxdkaiwv" path="res://UIFiles/MenuButtons.tres" id="3_wuxku"]
[ext_resource type="Texture2D" uid="uid://b1h7n2xn3ov5c" path="res://UIFiles/caraDia.png" id="4_0l2ax"]
[ext_resource type="Texture2D" uid="uid://ddxghmfbdf5tn" path="res://UIFiles/tick.PNG" id="4_ryh16"]
[ext_resource type="FontFile" uid="uid://daf37sguap3qf" path="res://UIFiles/CedarvilleCursive-Regular.ttf" id="4_v7ays"]
[ext_resource type="Texture2D" uid="uid://v8m5krg4g6lo" path="res://UIFiles/maximize.PNG" id="9_us34l"]
[ext_resource type="Texture2D" uid="uid://d5g567nsna07" path="res://UIFiles/minimize.PNG" id="10_u4gri"]
[ext_resource type="Texture2D" uid="uid://craqv0fu52fsp" path="res://UIFiles/volume.png" id="10_unbf4"]
[ext_resource type="FontFile" uid="uid://p5sc35hddxrq" path="res://UIFiles/FanwoodText-Regular.ttf" id="11_btpi5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5oskk"]
bg_color = Color(0.47451, 0.564706, 0.290196, 0.356863)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tkwm2"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.0509804, 0.0509804, 0.0509804, 0.54902)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_20531"]
texture = ExtResource("4_ryh16")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aqbl8"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
texture = ExtResource("4_ryh16")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4opy3")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 1.0
offset_top = -3.0
offset_right = 1921.0
offset_bottom = 1077.0
texture = ExtResource("1_xctah")

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 238.0
offset_bottom = 141.0
texture = ExtResource("2_yjugu")
flip_h = true
flip_v = true

[node name="return" type="Button" parent="TextureRect/TextureRect"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -6.0
offset_top = -3.0
offset_right = 257.0
offset_bottom = 162.0

[node name="ColorRect" type="Panel" parent="TextureRect"]
layout_mode = 0
offset_left = 1028.0
offset_top = 40.0
offset_right = 1823.0
offset_bottom = 1015.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5oskk")

[node name="TextureRect2" type="TextureRect" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_right = 799.0
offset_bottom = 970.0
texture = ExtResource("4_0l2ax")

[node name="Volume" type="HSlider" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 93.0
offset_top = 237.0
offset_right = 718.0
offset_bottom = 417.0
theme_override_icons/grabber = ExtResource("3_8iqim")
theme_override_icons/grabber_highlight = ExtResource("3_8iqim")
theme_override_styles/slider = SubResource("StyleBoxFlat_tkwm2")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_20531")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_aqbl8")
max_value = 200.0
step = 25.0
value = 100.0

[node name="fullScreen" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 137.0
offset_top = 637.0
offset_right = 340.0
offset_bottom = 836.0
theme = ExtResource("3_wuxku")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_v7ays")
theme_override_font_sizes/font_size = 40
icon = ExtResource("9_us34l")
expand_icon = true

[node name="mute" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 329.0
offset_top = 389.0
offset_right = 474.0
offset_bottom = 522.0
theme = ExtResource("3_wuxku")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_v7ays")
theme_override_font_sizes/font_size = 40
icon = ExtResource("10_unbf4")
expand_icon = true

[node name="minimize" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 482.0
offset_top = 642.0
offset_right = 681.0
offset_bottom = 841.0
theme = ExtResource("3_wuxku")
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_v7ays")
theme_override_font_sizes/font_size = 40
icon = ExtResource("10_u4gri")
expand_icon = true

[node name="Label" type="Label" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 238.0
offset_top = 184.0
offset_right = 534.0
offset_bottom = 319.0
theme = ExtResource("3_wuxku")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_btpi5")
theme_override_font_sizes/font_size = 100
text = "Volume"

[node name="return2" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 72.0
offset_top = 330.0
offset_right = 976.0
offset_bottom = 673.0

[connection signal="pressed" from="TextureRect/TextureRect/return" to="." method="_on_return_pressed"]
[connection signal="value_changed" from="TextureRect/ColorRect/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="TextureRect/ColorRect/fullScreen" to="." method="_on_full_screen_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/mute" to="." method="_on_mut_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/minimize" to="." method="_on_minimize_pressed"]
[connection signal="pressed" from="return2" to="." method="_on_return_pressed"]
